# new-rust-indexer-api

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_search.md
.github/workflows/: main.yml
src/: defaults.rs  main.rs  utils.rs
src/models/: account.rs  extra.rs  mod.rs  ohlcv.rs  pool.rs  pool_report.rs  sniper.rs  swap.rs  token.rs  transfer.rs
src/routes/: candle.rs  get_candlestick.rs  get_holders.rs  get_pair_info.rs  get_token_info.rs  get_top_traders.rs  get_trader_details.rs  get_trades.rs  last_transaction.rs  mod.rs  pool_report.rs  portfolio.rs  pulse.rs  search.rs
src/services/: clickhouse.rs  db.rs  mod.rs  redis.rs
src/types/: candlestick.rs  filter.rs  mod.rs  pulse.rs  token_info.rs
src/websocket/: mod.rs  new_pool_event.rs  new_swap_event.rs  store.rs
